--- a/collections/style.css
+++ b/collections/style.css
@@ -1,5 +1,6 @@
 @linkblue: #3267d6;
-
+//@savecolor: darken(green,5%);
+@savecolor: #ffb900;
 
 .dg_u .tags {
 
@@ -24,7 +25,7 @@
 		}
 
 		&.tag {
-			background-color: fadeout(green,30%);
+			background-color: @savecolor;
 		}
 
 
@@ -36,6 +37,15 @@
 
 }
 
+
+.dg_u {
+	box-sizing: border-box;
+
+	&.saved {
+		border: 4px solid @savecolor;
+
+	}
+}
 
 
 
